# advent-of-code-2021

./: README.md
day1/: compile.sh  data.txt  program.S
day2/: CMakeLists.txt
day3/: filter.sh  solve.sh
day4/: CMakeLists.txt
day4/include/: model.h  solver.cuh
day4/src/: cuda.cu  main.c
day5/: compile.sh  to_command.kt
day5/assets/: pack.mcmeta
day7/: CMakeLists.txt
day7/src/: functions.opencl  main.cpp
